# fgac

./: .gitignore  README.md
dls/: README.md  pyproject.toml  requirements.txt  run.sh  setup.sh  teardown.sh
dls/config/: README.md  config.yml  docker-compose.elastic.yml  docker-compose.opensearch.yml
dls/dataset/: README.md  enron_d1.jsonl  enron_d10.jsonl  enron_d100.jsonl  enron_d1000.jsonl
dls/gcp/: README.md  run_opensearch_two_vm_experiment.sh
dls/src/: cli.py
dls/src/debruijn/: README.md  __init__.py  graph.py  loaders.py  models.py  reconstruct_debruijn.py  render.py  traversal.py
dls/src/enumerator/: README.md  __init__.py  __main__.py  analyzer.py  args.py  cli.py  constants.py  corpus.py  enumerator.py  ngram_enumerator.py  prefix_oracles.py  progress.py  recovery_stats.py  runner.py  search_backend.py  search_env.py  setup_workflow.py  stats_report.py  telemetry.py  types.py  utils.py
dls/src/latex/: README.md  render_table.py
dls/src/tests/: README.md  test_args.py  test_build_enumerator_command.py  test_cli.py  test_ngram_enumerator.py  test_paths.py  test_prefix_oracles.py  test_preflight.py  (+1 more)
rls/: README.md  pyproject.toml  requirements.txt  setup.sh
rls/docs/: cli.md
rls/latex/: README.md  compile.sh  main.tex  usenix.sty
rls/orchestration/: README.md  run_crosszone_experiment.sh  run_crosszone_exps.sh  run_db_size_experiment.sh  run_existence_experiment.sh  run_join_mitigations_experiment.sh  run_oracle_accuracy.sh  run_samezone_exps.sh  run_singleattr_experiment.sh  run_tde_exps.sh  run_tuplext_experiment.sh
rls/src/: README.md
(+198 files in other folders)
