[project]
name = "rls-artifact"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.1",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "faker>=24.0",
  "rich>=13.7",
  "PyYAML>=6.0",
  "pytest>=8.4",
  "vulture>=2.16",
  "mypy>=2.1.0",
  "ruff>=0.13.0",
]

[project.scripts]
unfilter-rls = "rls_artifact.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
patients = ["sql/*.sql", "sql/README.md"]
reconstruction = ["config/*.yml", "config/README.md"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
